--- a/ipcalc2.vcxproj.filters
+++ b/ipcalc2.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="resource.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\Desktop\resource.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="ipcalc2.rc">
