--- a/ipcalc2.rc
+++ b/ipcalc2.rc
@@ -38,7 +38,7 @@ GROUPBOX        "Расчёт сетей", IDC_CALC_GROUP, 5, 90, 405, 90
 		CTEXT			"", IDC_ALL_IP, 15, 153, 130, 8
 
 	PUSHBUTTON      "Добавить", IDC_ADD_BUTTON, 160, 105, 50, 14
-	PUSHBUTTON      "Удалить", IDC_DEL_BUTTON, 160, 127, 50, 14
+	//PUSHBUTTON      "Удалить", IDC_DEL_BUTTON, 160, 127, 50, 14
 	PUSHBUTTON      "Очистить", IDC_CLR_BUTTON, 160, 149, 50, 14
 	LISTBOX         IDC_NET_LIST, 220, 100, 175, 85, LBS_HASSTRINGS | LBS_MULTICOLUMN | LBS_USETABSTOPS
 END
@@ -55,5 +55,7 @@ LTEXT			"Название сети", IDC_NAME_TEXT, 5, 5, 40, 10
 EDITTEXT		IDC_ADD_NAME, 50, 5, 80, 10, ES_LEFT
 LTEXT			"Число хостов", IDC_HOSTS, 5, 20, 40, 10
 EDITTEXT		IDC_ADD_HOSTS, 50, 20, 40, 10, ES_LEFT | ES_NUMBER
-PUSHBUTTON		"OK", IDC_ADD_OK, 40, 40, 50, 14
+DEFPUSHBUTTON		"OK", IDC_ADD_OK, 40, 40, 50, 14
 END
+
+APPICON ICON "calc.ico"
